--- a/test-notebooks/multiples.ipynb
+++ b/test-notebooks/multiples.ipynb
@@ -4,9 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style='text-align: center'>Welcome to the Notebook.</h1>\n",
+    "<h2 style='text-align: center'>Composition Notebook.</h2>\n",
     "\n",
-    "![It's the notebook](http://i.imgur.com/93hvktp.jpg?1)"
+    "![nteract logo](https://avatars2.githubusercontent.com/u/12401040?v=3&s=200)\n",
+    "\n",
+    "This is an Electron app of the Jupyter notebook, being built at [nteract/composition](https://github.com/nteract/composition). Should this section be filled with Lorem Ipsum? Make a PR if you think so. We're quite happy with it as is, though we're missing a few things:\n",
+    "\n",
+    "* [ ] asdf\n",
+    "* [ ] "
    ]
   },
   {
