Bring on the fonts!

--- a/test-notebooks/multiples.ipynb
+++ b/test-notebooks/multiples.ipynb
@@ -4,14 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style='text-align: center'>Composition Notebook.</h2>\n",
+    "## The Notable Composition Notebook\n",
     "\n",
-    "![nteract logo](https://avatars2.githubusercontent.com/u/12401040?v=3&s=200)\n",
+    "![comp](https://assets-cdn.github.com/images/icons/emoji/unicode/1f4d3.png)\n",
     "\n",
-    "This is an Electron app of the Jupyter notebook, being built at [nteract/composition](https://github.com/nteract/composition). Should this section be filled with Lorem Ipsum? Make a PR if you think so. We're quite happy with it as is, though we're missing a few things:\n",
+    "**It's a notebook!**\n",
     "\n",
-    "* [ ] asdf\n",
-    "* [ ] "
+    "This is an Electron app of the Jupyter notebook, being built at [nteract/composition](https://github.com/nteract/composition). We've got a ways to go before we have feature parity and you can lend a hand!"
    ]
   },
   {
@@ -92,27 +91,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ANSITest.ipynb            Functional.ipynb          multiples.ipynb           test4.ipynb\r\n",
-      "CSSReference.ipynb        TestOutputCallbacks.ipynb test2.ipynb               test4plus.ipynb\r\n",
-      "ConfinedOutput.ipynb      invalid.ipynb             test3.ipynb\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false
@@ -152,6 +130,32 @@
    ],
    "source": [
     "thistextwillerror"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://avatars2.githubusercontent.com/u/12401040?v=3&s=200\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import Image\n",
+    "Image(url='https://avatars2.githubusercontent.com/u/12401040?v=3&s=200')"
    ]
   },
   {
