--- a/test-notebooks/multiples.ipynb
+++ b/test-notebooks/multiples.ipynb
@@ -10,7 +10,13 @@
     "\n",
     "**It's a notebook!**\n",
     "\n",
-    "This is an Electron app of the Jupyter notebook, being built at [nteract/composition](https://github.com/nteract/composition). We've got a ways to go before we have feature parity and you can lend a hand!"
+    "This is an Electron app of the Jupyter notebook, being built at [nteract/composition](https://github.com/nteract/composition). The primary goals are:\n",
+    "\n",
+    "* Standalone distributable application for the notebook (in Electron!)\n",
+    "* One click installers for OS X and Windows\n",
+    "* Bundles a kernel with scientific Python packages\n",
+    "* Integrates well with the current ecosystem of tooling\n",
+    " - Should be able to detect other kernels"
    ]
   },
   {
