Minor CSS Tweaks
I'm sure a CSS or LESS Wizard will come along and make this nice.

--- a/test-notebooks/multiples.ipynb
+++ b/test-notebooks/multiples.ipynb
@@ -16,7 +16,8 @@
     "* One click installers for OS X and Windows\n",
     "* Bundles a kernel with scientific Python packages\n",
     "* Integrates well with the current ecosystem of tooling\n",
-    " - Should be able to detect other kernels"
+    "  * Should be able to detect other kernels\n",
+    "  * Comms should work (for ipywidgets)"
    ]
   },
   {
