--- a/intro.ipynb
+++ b/intro.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Notable Composition Notebook\n",
+    "## The Notable Nteract Notebook\n",
     "\n",
     "![comp](https://assets-cdn.github.com/images/icons/emoji/unicode/1f4d3.png)\n",
     "\n",
     "**It's a notebook!**\n",
     "\n",
-    "This is an Electron app of the Jupyter notebook, being built at [nteract/composition](https://github.com/nteract/composition). The primary goals are:\n",
+    "This is a standalone notebook for interacting with the REPL of your choice, being built at [nteract/nteract](https://github.com/nteract/nteract). The primary goals are:\n",
     "\n",
     "* Standalone distributable application for the notebook (in Electron!)\n",
     "* One click installers for OS X and Windows\n",
