Update notebook with geojson mimetype

--- a/example-notebooks/geojson.ipynb
+++ b/example-notebooks/geojson.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "def geojson(data):\n",
     "  bundle = {}\n",
-    "  bundle['application/vnd.geojson.v1+json'] = data\n",
+    "  bundle['application/vnd.geo+json'] = data\n",
     "  IPython.display.display(bundle, raw=True)"
    ]
   },
@@ -24,7 +24,82 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.geo+json": {
+       "type": "FeatureCollection",
+       "features": [
+        {
+         "geometry": {
+          "type": "LineString",
+          "coordinates": [
+           [
+            -105.00341892242432,
+            39.75383843460583
+           ],
+           [
+            -105.0008225440979,
+            39.751891803969535
+           ]
+          ]
+         },
+         "type": "Feature",
+         "properties": {
+          "underConstruction": false,
+          "popupContent": "This is free bus that will take you across downtown."
+         },
+         "id": 1
+        },
+        {
+         "geometry": {
+          "type": "LineString",
+          "coordinates": [
+           [
+            -105.0008225440979,
+            39.751891803969535
+           ],
+           [
+            -104.99820470809937,
+            39.74979664004068
+           ]
+          ]
+         },
+         "type": "Feature",
+         "properties": {
+          "underConstruction": true,
+          "popupContent": "This is free bus that will take you across downtown."
+         },
+         "id": 2
+        },
+        {
+         "geometry": {
+          "type": "LineString",
+          "coordinates": [
+           [
+            -104.99820470809937,
+            39.74979664004068
+           ],
+           [
+            -104.98689651489258,
+            39.741052354709055
+           ]
+          ]
+         },
+         "type": "Feature",
+         "properties": {
+          "underConstruction": false,
+          "popupContent": "This is free bus that will take you across downtown."
+         },
+         "id": 3
+        }
+       ]
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "data = {\n",
     "    \"type\": \"FeatureCollection\",\n",
@@ -78,15 +153,6 @@
     "}\n",
     "\ngeojson(data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [],
-   "outputs": []
   }
  ],
  "metadata": {
@@ -99,16 +165,16 @@
    "display_name": "Python 3"
   },
   "language_info": {
-   "pygments_lexer": "ipython3",
-   "nbconvert_exporter": "python",
    "name": "python",
-   "mimetype": "text/x-python",
-   "file_extension": ".py",
-   "version": "3.5.1",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
-   }
+   },
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4
