--- a/example-notebooks/geojson.ipynb
+++ b/example-notebooks/geojson.ipynb
@@ -3,7 +3,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -20,139 +20,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
+   "source": [
+    "data = {\"type\":\"FeatureCollection\",\"features\":[{\"type\":\"Feature\",\"properties\":{\"place\":\"The coffee bar\",\"login\":\"espresso\",\"lat\":\"38.91427\",\"lon\":\"-77.02827\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.02827,38.91427]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Bistro Bohem\",\"login\":\"2027355895\",\"lat\":\"38.91538\",\"lon\":\"-77.02013\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.02013,38.91538]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Black Cat\",\"login\":\"luckycat\",\"lat\":\"38.91458\",\"lon\":\"-77.03155\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.03155,38.91458]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Snap\",\"login\":\"nutella1\",\"lat\":\"38.92239\",\"lon\":\"-77.04227\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.04227,38.92239]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Columbia Heights Coffee\",\"login\":\"FAIRTRADE1\",\"lat\":\"38.93222\",\"lon\":\"-77.02854\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.02854,38.93222]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Azi's Cafe\",\"login\":\"sunny\",\"lat\":\"38.90842\",\"lon\":\"-77.02419\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.02419,38.90842]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Blind Dog Cafe\",\"login\":\"baxtercantsee\",\"lat\":\"38.91931\",\"lon\":\"-77.02518\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.02518,38.91931]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Le Caprice\",\"login\":\"baguette\",\"lat\":\"38.93260\",\"lon\":\"-77.03304\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.03304,38.9326]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Filter\",\"login\":\"\",\"lat\":\"38.91368\",\"lon\":\"-77.04509\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.04509,38.91368]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Peregrine\",\"login\":\"espresso\",\"lat\":\"38.88516\",\"lon\":\"-76.99656\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-76.99656,38.88516]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Tryst\",\"login\":\"coupetnt\",\"lat\":\"38.921894\",\"lon\":\"-77.042438\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.042438,38.921894]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"The Coupe\",\"login\":\"voteforus\",\"lat\":\"38.93206\",\"lon\":\"-77.02821\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.02821,38.93206]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Big Bear Cafe\",\"login\":\"\",\"lat\":\"38.91275\",\"lon\":\"-77.01239\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.01239,38.91275]}}]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "geojson(data)"
+   ],
    "outputs": [
     {
+     "metadata": {},
      "data": {
       "application/vnd.geo+json": {
        "type": "FeatureCollection",
        "features": [
         {
+         "type": "Feature",
          "geometry": {
-          "type": "LineString",
+          "type": "Point",
           "coordinates": [
-           [
-            -105.00341892242432,
-            39.75383843460583
-           ],
-           [
-            -105.0008225440979,
-            39.751891803969535
-           ]
+           -77.02827,
+           38.91427
           ]
          },
-         "type": "Feature",
          "properties": {
-          "underConstruction": false,
-          "popupContent": "This is free bus that will take you across downtown."
-         },
-         "id": 1
+          "place": "The coffee bar",
+          "lat": "38.91427",
+          "lon": "-77.02827",
+          "login": "espresso"
+         }
         },
         {
+         "type": "Feature",
          "geometry": {
-          "type": "LineString",
+          "type": "Point",
           "coordinates": [
-           [
-            -105.0008225440979,
-            39.751891803969535
-           ],
-           [
-            -104.99820470809937,
-            39.74979664004068
-           ]
+           -77.02013,
+           38.91538
           ]
          },
-         "type": "Feature",
          "properties": {
-          "underConstruction": true,
-          "popupContent": "This is free bus that will take you across downtown."
-         },
-         "id": 2
+          "place": "Bistro Bohem",
+          "lat": "38.91538",
+          "lon": "-77.02013",
+          "login": "2027355895"
+         }
         },
         {
+         "type": "Feature",
          "geometry": {
-          "type": "LineString",
+          "type": "Point",
           "coordinates": [
-           [
-            -104.99820470809937,
-            39.74979664004068
-           ],
-           [
-            -104.98689651489258,
-            39.741052354709055
-           ]
+           -77.03155,
+           38.91458
           ]
          },
-         "type": "Feature",
          "properties": {
-          "underConstruction": false,
-          "popupContent": "This is free bus that will take you across downtown."
+          "place": "Black Cat",
+          "lat": "38.91458",
+          "lon": "-77.03155",
+          "login": "luckycat"
+         }
+        },
+        {
+         "type": "Feature",
+         "geometry": {
+          "type": "Point",
+          "coordinates": [
+           -77.04227,
+           38.92239
+          ]
          },
-         "id": 3
+         "properties": {
+          "place": "Snap",
+          "lat": "38.92239",
+          "lon": "-77.04227",
+          "login": "nutella1"
+         }
+        },
+        {
+         "type": "Feature",
+         "geometry": {
+          "type": "Point",
+          "coordinates": [
+           -77.02854,
+           38.93222
+          ]
+         },
+         "properties": {
+          "place": "Columbia Heights Coffee",
+          "lat": "38.93222",
+          "lon": "-77.02854",
+          "login": "FAIRTRADE1"
+         }
+        },
+        {
+         "type": "Feature",
+         "geometry": {
+          "type": "Point",
+          "coordinates": [
+           -77.02419,
+           38.90842
+          ]
+         },
+         "properties": {
+          "place": "Azi's Cafe",
+          "lat": "38.90842",
+          "lon": "-77.02419",
+          "login": "sunny"
+         }
+        },
+        {
+         "type": "Feature",
+         "geometry": {
+          "type": "Point",
+          "coordinates": [
+           -77.02518,
+           38.91931
+          ]
+         },
+         "properties": {
+          "place": "Blind Dog Cafe",
+          "lat": "38.91931",
+          "lon": "-77.02518",
+          "login": "baxtercantsee"
+         }
+        },
+        {
+         "type": "Feature",
+         "geometry": {
+          "type": "Point",
+          "coordinates": [
+           -77.03304,
+           38.9326
+          ]
+         },
+         "properties": {
+          "place": "Le Caprice",
+          "lat": "38.93260",
+          "lon": "-77.03304",
+          "login": "baguette"
+         }
+        },
+        {
+         "type": "Feature",
+         "geometry": {
+          "type": "Point",
+          "coordinates": [
+           -77.04509,
+           38.91368
+          ]
+         },
+         "properties": {
+          "place": "Filter",
+          "lat": "38.91368",
+          "lon": "-77.04509",
+          "login": ""
+         }
+        },
+        {
+         "type": "Feature",
+         "geometry": {
+          "type": "Point",
+          "coordinates": [
+           -76.99656,
+           38.88516
+          ]
+         },
+         "properties": {
+          "place": "Peregrine",
+          "lat": "38.88516",
+          "lon": "-76.99656",
+          "login": "espresso"
+         }
+        },
+        {
+         "type": "Feature",
+         "geometry": {
+          "type": "Point",
+          "coordinates": [
+           -77.042438,
+           38.921894
+          ]
+         },
+         "properties": {
+          "place": "Tryst",
+          "lat": "38.921894",
+          "lon": "-77.042438",
+          "login": "coupetnt"
+         }
+        },
+        {
+         "type": "Feature",
+         "geometry": {
+          "type": "Point",
+          "coordinates": [
+           -77.02821,
+           38.93206
+          ]
+         },
+         "properties": {
+          "place": "The Coupe",
+          "lat": "38.93206",
+          "lon": "-77.02821",
+          "login": "voteforus"
+         }
+        },
+        {
+         "type": "Feature",
+         "geometry": {
+          "type": "Point",
+          "coordinates": [
+           -77.01239,
+           38.91275
+          ]
+         },
+         "properties": {
+          "place": "Big Bear Cafe",
+          "lat": "38.91275",
+          "lon": "-77.01239",
+          "login": ""
+         }
         }
        ]
       }
      },
-     "metadata": {},
      "output_type": "display_data"
     }
-   ],
-   "source": [
-    "data = {\n",
-    "    \"type\": \"FeatureCollection\",\n",
-    "    \"features\": [\n",
-    "        {\n",
-    "            \"type\": \"Feature\",\n",
-    "            \"geometry\": {\n",
-    "                \"type\": \"LineString\",\n",
-    "                \"coordinates\": [\n",
-    "                    [-105.00341892242432, 39.75383843460583],\n",
-    "                    [-105.0008225440979, 39.751891803969535]\n",
-    "                ]\n",
-    "            },\n",
-    "            \"properties\": {\n",
-    "                \"popupContent\": \"This is free bus that will take you across downtown.\",\n",
-    "                \"underConstruction\": False\n",
-    "            },\n",
-    "            \"id\": 1\n",
-    "        },\n",
-    "        {\n",
-    "            \"type\": \"Feature\",\n",
-    "            \"geometry\": {\n",
-    "                \"type\": \"LineString\",\n",
-    "                \"coordinates\": [\n",
-    "                    [-105.0008225440979, 39.751891803969535],\n",
-    "                    [-104.99820470809937, 39.74979664004068]\n",
-    "                ]\n",
-    "            },\n",
-    "            \"properties\": {\n",
-    "                \"popupContent\": \"This is free bus that will take you across downtown.\",\n",
-    "                \"underConstruction\": True\n",
-    "            },\n",
-    "            \"id\": 2\n",
-    "        },\n",
-    "        {\n",
-    "            \"type\": \"Feature\",\n",
-    "            \"geometry\": {\n",
-    "                \"type\": \"LineString\",\n",
-    "                \"coordinates\": [\n",
-    "                    [-104.99820470809937, 39.74979664004068],\n",
-    "                    [-104.98689651489258, 39.741052354709055]\n",
-    "                ]\n",
-    "            },\n",
-    "            \"properties\": {\n",
-    "                \"popupContent\": \"This is free bus that will take you across downtown.\",\n",
-    "                \"underConstruction\": False\n",
-    "            },\n",
-    "            \"id\": 3\n",
-    "        }\n",
-    "    ]\n",
-    "}\n",
-    "\ngeojson(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [],
+   "outputs": []
   }
  ],
  "metadata": {
@@ -165,16 +280,16 @@
    "display_name": "Python 3"
   },
   "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "file_extension": ".py",
+   "version": "3.5.2",
    "mimetype": "text/x-python",
-   "version": "3.5.2"
+   "name": "python",
+   "codemirror_mode": {
+    "version": 3,
+    "name": "ipython"
+   },
+   "nbconvert_exporter": "python"
   }
  },
  "nbformat": 4
