Revert some eslint and adhere to other rules

--- a/example-notebooks/plotlyr.ipynb
+++ b/example-notebooks/plotlyr.ipynb
@@ -3,7 +3,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -11,7 +11,7 @@
     {
      "source": "R display func",
      "data": {
-      "application/json+plotly.v1": {
+      "application/vnd.plotly.v1+json": {
        "data": [
         {
          "x": [
@@ -41,59 +41,20 @@
     "data <- list(list(x=c(1999, 2000, 2001, 2002), y=c(10, 15, 13, 17), type='scatter'))\n",
     "figure <- list(data=data)\n",
     "\n",
-    "mimebundle <- list('application/json+plotly.v1'=figure)\n",
+    "mimebundle <- list('application/vnd.plotly.v1+json'=figure)\n",
     "#mimebundle[[]] <- figure\n",
     "IRdisplay::publish_mimebundle(mimebundle)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "c(1) == 1"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "TRUE"
-      ],
-      "text/markdown": [
-       "TRUE"
-      ],
-      "text/latex": [
-       "TRUE"
-      ],
-      "text/plain": [
-       "[1] TRUE"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [],
-   "outputs": []
   }
  ],
  "metadata": {
+  "kernel_info": {
+   "name": "ir"
+  },
   "kernelspec": {
    "name": "ir",
    "language": "R",
    "display_name": "R"
-  },
-  "kernel_info": {
-   "name": "ir"
   },
   "language_info": {
    "name": "R",
