docs: fix up the bar display at the end

--- a/example-notebooks/display-updates.ipynb
+++ b/example-notebooks/display-updates.ipynb
@@ -1,14 +1,14 @@
 {
  "cells": [
   {
-   "execution_count": null,
    "metadata,outputHidden": false,
+   "metadata,outputExpanded": false,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "status": "",
-   "metadata,outputExpanded": false,
    "cell_type": "markdown",
    "source": [
     "# Outputs you can update by name\n",
@@ -18,46 +18,46 @@
    ]
   },
   {
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "idle",
+   "status": "",
+   "metadata,outputExpanded": false,
    "cell_type": "code",
    "source": [
     "print(\"typical ouput\")"
    ]
   },
   {
-   "cell_type": "markdown",
    "execution_count": null,
+   "metadata,outputHidden": false,
    "metadata": {
     "collapsed": false
    },
+   "metadata,outputExpanded": false,
+   "outputs": [],
+   "status": "",
+   "cell_type": "markdown",
    "source": [
     "There was no simple way to make code in one cell to write output to another cell. Now there is!\n",
     "\n\n",
     "This feature is so new that we need to patch `display` until nteract depends on an IPython release which includes [ipython/ipykernel#204](https://github.com/ipython/ipykernel/pulls/204) and [ipython/ipython#10048](https://github.com/ipython/ipyhton/pulls/10048). So as a temporary workaround, we will define `display_with_id` and its signature and behavior will be provided with `display` in future versions of IPython.\n",
     "\n\n",
     "**You do not need to understand any of the code in the next cell**, just execute it so you can get to the fun stuff.\n"
-   ],
-   "outputs": [],
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
-   "status": ""
+   ]
   },
   {
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata,outputHidden": false,
+   "metadata,outputExpanded": false,
    "metadata": {
     "collapsed": false
    },
-   "metadata,outputExpanded": false,
    "outputs": [],
-   "status": "idle",
+   "status": "",
    "cell_type": "code",
    "source": [
     "# a temporary patch of display for demonstration purposes\n",
@@ -76,102 +76,102 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "metadata,outputHidden": false,
    "metadata": {},
+   "metadata,outputExpanded": false,
+   "outputs": [],
+   "status": "",
+   "cell_type": "markdown",
    "source": [
     "## The fun stuff\n",
     "\nYou made it! Pat yourself on the back and take a deep breath, the scariest part is over. The `display` function now has an optional `display_id` parameter. Let's give our next display the boring name and call it *some_destination*."
-   ],
-   "outputs": [],
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
-   "status": ""
+   ]
   },
   {
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
    "metadata": {
     "collapsed": false
    },
+   "metadata,outputExpanded": false,
    "outputs": [],
-   "status": "idle",
+   "status": "",
    "cell_type": "code",
    "source": [
     "display('initial display', 'some_destination')"
    ]
   },
   {
-   "cell_type": "markdown",
+   "metadata,outputExpanded": false,
+   "metadata,outputHidden": false,
    "metadata": {},
+   "outputs": [],
+   "status": "",
+   "cell_type": "markdown",
    "source": [
     "Ok, so far, nothing earth shattering. But what happens if you call display with the same `display_id` again?\n",
     "\n\n\n"
-   ],
-   "outputs": [],
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
-   "status": ""
-  },
-  {
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "status": "idle",
-   "cell_type": "code",
-   "source": [
-    "display('spoler alert: output updated in both', 'some_destination')\t\t\t"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fantastic! We have a way of mirroring output in multiple places. But what if you only want update the previously named displays, without creating a new one? Just call `display` with `update=True`, like this:"
-   ],
-   "outputs": [],
+   "execution_count": 4,
    "metadata,outputHidden": false,
    "metadata,outputExpanded": false,
-   "status": ""
-  },
-  {
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
-   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "idle",
+   "status": "",
+   "cell_type": "code",
+   "source": [
+    "display('spoiler alert: output updated in both', 'some_destination')\t\t\t"
+   ]
+  },
+  {
+   "metadata,outputExpanded": false,
+   "metadata,outputHidden": false,
+   "metadata": {},
+   "outputs": [],
+   "status": "",
+   "cell_type": "markdown",
+   "source": [
+    "Fantastic! We have a way of mirroring output in multiple places. But what if you only want update the previously named displays, without creating a new one? Just call `display` with `update=True`, like this:"
+   ]
+  },
+  {
+   "metadata,outputHidden": false,
+   "metadata,outputExpanded": false,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "status": "",
    "cell_type": "code",
    "source": [
     "display('no output here, update above', 'some_destination', update=True)\t\t\t"
    ]
   },
   {
-   "cell_type": "markdown",
+   "metadata,outputHidden": false,
    "metadata": {},
+   "outputs": [],
+   "status": "",
+   "metadata,outputExpanded": false,
+   "cell_type": "markdown",
    "source": [
     "Though we have been working with text so far, this also works for the all other output types. Let's make an HTML-based progress bar!"
-   ],
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
-   "status": "",
-   "outputs": []
+   ]
   },
   {
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata,outputHidden": false,
+   "metadata,outputExpanded": false,
    "metadata": {
     "collapsed": false
    },
-   "metadata,outputExpanded": false,
    "outputs": [],
-   "status": "idle",
+   "status": "",
    "cell_type": "code",
    "source": [
     "import os\n",
@@ -197,25 +197,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "metadata,outputExpanded": false,
+   "metadata,outputHidden": false,
    "metadata": {},
+   "outputs": [],
+   "status": "",
+   "cell_type": "markdown",
    "source": [
     "The progress bar is drawn and it starts off at `0`. Fill it up half way and call its `update` method to get a redraw. "
-   ],
-   "outputs": [],
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
-   "status": ""
+   ]
   },
   {
+   "execution_count": 7,
    "metadata,outputHidden": false,
    "metadata,outputExpanded": false,
-   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "idle",
+   "status": "",
    "cell_type": "code",
    "source": [
     "bar.progress = 50\n",
@@ -223,25 +223,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "metadata,outputHidden": false,
+   "metadata,outputExpanded": false,
    "metadata": {},
+   "outputs": [],
+   "status": "",
+   "cell_type": "markdown",
    "source": [
     "Now go half-way again"
-   ],
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
-   "status": "",
-   "outputs": []
+   ]
   },
   {
-   "metadata,outputHidden": false,
    "metadata,outputExpanded": false,
-   "execution_count": 21,
+   "execution_count": 8,
+   "metadata,outputHidden": false,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "idle",
+   "status": "",
    "cell_type": "code",
    "source": [
     "bar.progress = 75\n",
@@ -249,54 +249,55 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "metadata,outputHidden": false,
    "metadata": {},
+   "outputs": [],
+   "status": "",
+   "metadata,outputExpanded": false,
+   "cell_type": "markdown",
    "source": [
     "Our original bar is kind of far away now, let's get another view of it below."
-   ],
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
-   "status": "",
-   "outputs": []
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "metadata,outputHidden": false,
+   "metadata,outputExpanded": false,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "source": [
-    "bar"
-   ],
    "outputs": [],
-   "status": "idle",
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false
+   "status": "",
+   "cell_type": "code",
+   "source": [
+    "bar.display()"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "metadata,outputHidden": false,
    "metadata": {},
+   "outputs": [],
+   "status": "",
+   "metadata,outputExpanded": false,
+   "cell_type": "markdown",
    "source": [
     "Much better. Let's make a little animation that [Zeno](https://en.wikipedia.org/wiki/Zeno%27s_paradoxes#Dichotomy_paradox) would be proud of:"
-   ],
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
-   "status": "",
-   "outputs": []
+   ]
   },
   {
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "idle",
+   "status": "",
+   "metadata,outputExpanded": false,
    "cell_type": "code",
    "source": [
     "import time\n",
     "bar.progress = 0\n",
+    "bar.update()\n",
     "for _ in range(5):\n",
     "    time.sleep(1)\n",
     "    bar.progress += (bar.capacity - bar.progress) / 2.\n",
@@ -304,67 +305,68 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "metadata,outputExpanded": false,
+   "metadata,outputHidden": false,
    "metadata": {},
+   "outputs": [],
+   "status": "",
+   "cell_type": "markdown",
    "source": [
     "You might have noticed that each `ProgressBar` autogenerates a random `display_id` which is handy if you want to have several of them.\n",
     "\n"
-   ],
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
-   "status": "",
-   "outputs": []
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "metadata,outputHidden": false,
+   "metadata,outputExpanded": false,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
+   "status": "",
+   "cell_type": "code",
    "source": [
     "num_bars = 5\n",
     "bars = [ProgressBar(100) for _ in range(num_bars)]\n",
     "\n",
     "for b in bars:\n",
-    "    display(b)"
-   ],
-   "outputs": [],
-   "status": "idle",
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false
+    "    b.display()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
+   "metadata,outputHidden": false,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
+   "status": "",
+   "metadata,outputExpanded": false,
+   "cell_type": "code",
    "source": [
     "import random \n",
     "for x in range(20):\n",
     "    time.sleep(.1)\n",
     "    idx = random.randrange(num_bars)\n",
-    "    bars[idx].progress +=  random.randint(-2, 10)"
-   ],
-   "outputs": [],
-   "status": "idle",
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false
+    "    bars[idx].progress +=  random.randint(-2, 10)\n",
+    "    bars[idx].update()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
+   "metadata,outputHidden": false,
+   "metadata,outputExpanded": false,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
+   "status": "",
+   "cell_type": "code",
    "source": [
     "for b in bars:\n",
-    "    display(b)"
-   ],
-   "outputs": [],
-   "status": "idle",
-   "metadata,outputHidden": false,
-   "metadata,outputExpanded": false
+    "    b.display()"
+   ]
   }
  ],
  "nbformat": 4,
@@ -379,16 +381,16 @@
    "name": "python3"
   },
   "language_info": {
-   "file_extension": ".py",
    "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
+   "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "mimetype": "text/x-python",
    "version": "3.5.2",
-   "nbconvert_exporter": "python"
+   "codemirror_mode": {
+    "version": 3,
+    "name": "ipython"
+   },
+   "mimetype": "text/x-python",
+   "file_extension": ".py"
   }
  }
 }
