fix typo in display-updates

--- a/example-notebooks/display-updates.ipynb
+++ b/example-notebooks/display-updates.ipynb
@@ -24,7 +24,7 @@
    "status": "idle",
    "cell_type": "code",
    "source": [
-    "print(\"typical ouput\")"
+    "print(\"typical output\")"
    ]
   },
   {
