wip - set stack.

--- a/Stacks and Queues/Stack of Plates.ipynb
+++ b/Stacks and Queues/Stack of Plates.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-2-55b9b7b08a6d>, line 43)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-55b9b7b08a6d>\"\u001b[0;36m, line \u001b[0;32m43\u001b[0m\n\u001b[0;31m    # do we destroy a stack after it's been spawned and no longer used?\u001b[0m\n\u001b[0m                                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Stack:\n",
     "    def __init__(self):\n",
@@ -56,6 +47,19 @@
     "        self.mini\n",
     "\n",
     "class SetOfStacks:\n",
+    "    \n",
+    "    def __init__(self, stack_max):\n",
+    "        self.stack_set = []\n",
+    "        self.stack_set.append(Stack())\n",
+    "        self.stack_max = stack_max\n",
+    "        self.size = -1\n",
+    "        \n",
+    "    def push(self, item):\n",
+    "        if not self.stack_set[0]:\n",
+    "            print(\"no stuffs\")\n",
+    "        else:\n",
+    "            print(\"Stuffs\")\n",
+    "        \n",
     "    # get a set of stacks, will need a max size in the init. \n",
     "    \n",
     "    # will need to call a new stack every time the max size is reached\n",
@@ -64,6 +68,36 @@
     "        # stack.size() method\n",
     "        # setofstack.size() method? \n",
     "        # list of stacks, each stack needs to be a list, and essentially a 2d array. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "setOfStacks = SetOfStacks(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stuffs\n"
+     ]
+    }
+   ],
+   "source": [
+    "setOfStacks.push(1)"
    ]
   },
   {
