--- a/Stacks and Queues/Stack of Plates.ipynb
+++ b/Stacks and Queues/Stack of Plates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
@@ -55,10 +55,30 @@
     "        self.size = -1\n",
     "        \n",
     "    def push(self, item):\n",
-    "        if not self.stack_set[0]:\n",
-    "            print(\"no stuffs\")\n",
-    "        else:\n",
-    "            print(\"Stuffs\")\n",
+    "        self.size += 1\n",
+    "        set_index = self.size // self.stack_max\n",
+    "        stack_index = self.size % self.stack_max\n",
+    "        \n",
+    "        print(self.size)\n",
+    "        print(set_index)\n",
+    "        print(stack_index)\n",
+    "        \n",
+    "        if set_index > 0 and stack_index == 0:\n",
+    "            self.stack_set.append(Stack())\n",
+    "            self.stack_set[set_index].stack.append(item)\n",
+    "           \n",
+    "        else: \n",
+    "            self.stack_set[set_index].stack.append(item)\n",
+    "            print(\"added to old stack\")\n",
+    "            \n",
+    "    def debug_print(self):\n",
+    "        for number in range(self.size + 1):\n",
+    "            print(number)\n",
+    "            set_index = number // self.stack_max\n",
+    "            stack_index = number % self.stack_max\n",
+    "            \n",
+    "            print(self.stack_set[set_index].stack[stack_index])\n",
+    "        \n",
     "        \n",
     "    # get a set of stacks, will need a max size in the init. \n",
     "    \n",
@@ -72,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 136,
    "metadata": {
     "collapsed": false
    },
@@ -92,13 +112,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stuffs\n"
+      "2\n",
+      "0\n",
+      "2\n",
+      "added to old stack\n"
      ]
     }
    ],
    "source": [
     "setOfStacks.push(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "setOfStacks.debug_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
