implemented pop function.

--- a/Stacks and Queues/Stack of Plates.ipynb
+++ b/Stacks and Queues/Stack of Plates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 181,
    "metadata": {
     "collapsed": false
    },
@@ -59,40 +59,42 @@
     "        set_index = self.size // self.stack_max\n",
     "        stack_index = self.size % self.stack_max\n",
     "        \n",
-    "        print(self.size)\n",
-    "        print(set_index)\n",
-    "        print(stack_index)\n",
-    "        \n",
     "        if set_index > 0 and stack_index == 0:\n",
     "            self.stack_set.append(Stack())\n",
     "            self.stack_set[set_index].stack.append(item)\n",
     "           \n",
     "        else: \n",
     "            self.stack_set[set_index].stack.append(item)\n",
-    "            print(\"added to old stack\")\n",
-    "            \n",
+    "     \n",
+    "    def pop(self):\n",
+    "        return_item = None\n",
+    "        \n",
+    "        if self.size > -1:\n",
+    "            set_index = self.size //self.stack_max\n",
+    "            stack_index = self.size % self.stack_max\n",
+    "            self.size -= 1\n",
+    "        \n",
+    "            return_item = self.stack_set[set_index].stack.pop()\n",
+    "        \n",
+    "            if stack_index == 0:\n",
+    "                self.stack_set[set_index].pop()\n",
+    "        \n",
+    "        return return_item\n",
+    "\n",
     "    def debug_print(self):\n",
     "        for number in range(self.size + 1):\n",
-    "            print(number)\n",
+    "\n",
     "            set_index = number // self.stack_max\n",
     "            stack_index = number % self.stack_max\n",
     "            \n",
     "            print(self.stack_set[set_index].stack[stack_index])\n",
     "        \n",
-    "        \n",
-    "    # get a set of stacks, will need a max size in the init. \n",
-    "    \n",
-    "    # will need to call a new stack every time the max size is reached\n",
-    "        # do we destroy a stack after it's been spawned and no longer used? \n",
-    "        # Will also need to keep track of the total stack size.. \n",
-    "        # stack.size() method\n",
-    "        # setofstack.size() method? \n",
-    "        # list of stacks, each stack needs to be a list, and essentially a 2d array. "
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 182,
    "metadata": {
     "collapsed": false
    },
@@ -103,46 +105,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 183,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "0\n",
-      "2\n",
-      "added to old stack\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "setOfStacks.push(1)"
+    "setOfStacks.pop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 184,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "2\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "setOfStacks.debug_print()"
    ]
