--- a/Stacks and Queues/Queue Via Stack.ipynb
+++ b/Stacks and Queues/Queue Via Stack.ipynb
@@ -10,6 +10,106 @@
    "source": [
     "# queue via two stacks "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class StackQueue:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.queue = []\n",
+    "        \n",
+    "    def push(self, value):\n",
+    "        self.queue = [value] + (self.queue)\n",
+    "        \n",
+    "    def pop(self):\n",
+    "        return self.queue.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sq = StackQueue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sq.push(1)\n",
+    "sq.push(2)\n",
+    "sq.push(3)\n",
+    "sq.push(4)\n",
+    "sq.push(5)\n",
+    "sq.push(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sq.queue)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(sq.queue)):\n",
+    "    print(sq.pop())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
